tests/baselines/reference/templateStringsArrayTypeRedefinedInES6Mode.errors.txt
tests/cases/compiler/templateStringsArrayTypeRedefinedInES6Mode.ts(8,3): error TS2345: Argument of type '{ [x: number]: undefined; }' is not assignable to parameter of type 'TemplateStringsArray'.
  Property 'raw' is missing in type '{ [x: number]: undefined; }'.


==== tests/cases/compiler/templateStringsArrayTypeRedefinedInES6Mode.ts (1 errors) ====
    
    class TemplateStringsArray {
    }
    
    function f(x: TemplateStringsArray, y: number, z: number) {
    }
    
    f({}, 10, 10);
      ~~
!!! error TS2345: Argument of type '{ [x: number]: undefined; }' is not assignable to parameter of type 'TemplateStringsArray'.
!!! error TS2345:   Property 'raw' is missing in type '{ [x: number]: undefined; }'.
    
    f `abcdef${ 1234 }${ 5678 }ghijkl`;